[project]
name = "data-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "streamlit>=1.54.0",
    "streamlit-folium>=0.26.2",
    "streamlit-plotly-events>=0.0.6",
]
